# next2_ros2control

./: CMakeLists.txt  README.md  next2_ros2control.xml  package.xml
bringup/launch/: diffbot.launch.py  view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.materials.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro  face.xacro  lidar.xacro  robot.urdf.xacro
hardware/: diffbot_system.cpp
hardware/include/next2_ros2control/: diffbot_system.hpp
test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
